# ConstexprSHA-2

./: CMakeLists.txt  ConstexprSHA-2.sln  Hash.sln  LICENSE.txt  README.md
.github/workflows/: cmake-multi-platform.yml
SHA-2/: SHA-2.vcxproj  SHA-2.vcxproj.filters  hex_to_binary.hpp  main.cpp  sha256.hpp  test_sha224.cpp  test_sha256.cpp
Sha256/: Sha256.vcxproj  Sha256.vcxproj.filters  main.cpp  sha256.h  util.hpp
include/: sha2.hpp  sha256.hpp  util.hpp
tests/: CMakeLists.txt  hex_to_binary.hpp  test_sha224.cpp  test_sha256.cpp  test_sha384.cpp  test_sha512.cpp  test_sha512_224.cpp  test_sha512_256.cpp  test_util.cpp  tests.vcxproj  tests.vcxproj.filters
